--- a/package.json
+++ b/package.json
@@ -6,20 +6,34 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/d3-fetch": "^1.1.5",
+    "@types/d3-scale": "^2.2.0",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-simple-maps": "^1.0.1",
+    "@types/recharts": "^1.8.9",
+    "antd": "^4.1.1",
+    "d3-fetch": "^1.1.2",
+    "d3-scale": "^3.2.1",
+    "graphql": "^15.0.0",
+    "graphql-hooks": "^4.4.4",
+    "graphql-tag": "^2.10.3",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-simple-maps": "^2.0.0",
+    "recharts": "^1.8.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && serverless client deploy --stage prod --no-confirm"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.0.3",
+    "serverless": "^1.67.3",
+    "serverless-finch": "^2.5.2"
   }
 }
