--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,20 +4,21 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "es2018"
     ],
     "allowJs": true,
     "skipLibCheck": true,
+    "noImplicitReturns": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "strict": true
   },
   "include": [
     "src"
