--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-simple-maps": "^1.0.1",
     "@types/recharts": "^1.8.9",
     "antd": "^4.1.1",
@@ -23,6 +24,8 @@
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.0.0",
     "recharts": "^1.8.5",
