--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/d3": "^5.7.2",
     "@types/d3-fetch": "^1.1.5",
     "@types/d3-scale": "^2.2.0",
     "@types/jest": "^24.0.0",
@@ -16,6 +17,7 @@
     "@types/react-simple-maps": "^1.0.1",
     "@types/recharts": "^1.8.9",
     "antd": "^4.1.1",
+    "d3": "^5.15.1",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
     "graphql": "^15.0.0",
