--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-simple-maps": "^1.0.1",
     "@types/recharts": "^1.8.9",
