--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "es2018"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "noImplicitReturns": false,
@@ -20,7 +16,5 @@
     "jsx": "react",
     "strict": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
