--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-simple-maps": "^1.0.1",
+    "@types/react-tooltip": "^3.11.0",
     "@types/recharts": "^1.8.9",
     "antd": "^4.1.1",
     "d3": "^5.15.1",
@@ -33,6 +34,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.0.0",
+    "react-tooltip": "^4.2.1",
     "recharts": "^1.8.5",
     "typescript": "~3.7.2"
   },
