--- a/package.json
+++ b/package.json
@@ -1,68 +1,15 @@
 {
-  "name": "covid-stats-dashboard",
+  "name": "covid-stats-dashboard-nextjs",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/d3": "^5.7.2",
-    "@types/d3-fetch": "^1.1.5",
-    "@types/d3-scale": "^2.2.0",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-helmet": "^5.0.15",
-    "@types/react-router": "^5.1.5",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/react-simple-maps": "^1.0.1",
-    "@types/react-tooltip": "^3.11.0",
-    "@types/recharts": "^1.8.9",
-    "antd": "^4.1.1",
-    "d3": "^5.15.1",
-    "d3-fetch": "^1.1.2",
-    "d3-scale": "^3.2.1",
-    "graphql": "^15.0.0",
-    "graphql-hooks": "^4.4.4",
-    "graphql-tag": "^2.10.3",
-    "moment": "^2.24.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
-    "react-markdown": "^4.3.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-simple-maps": "^2.0.0",
-    "react-tooltip": "^4.2.1",
-    "recharts": "^1.8.5",
-    "typescript": "~3.7.2"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "yarn build && react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "yarn build && serverless client deploy --stage prod --no-confirm"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "prettier": "^2.0.3",
-    "serverless": "^1.67.3",
-    "serverless-finch": "^2.5.2"
+  "dependencies": {
+    "next": "9.3.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   }
 }
