--- a/package.json
+++ b/package.json
@@ -5,11 +5,75 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "build:docker": "docker build -t covid-stats-dashboard .",
+    "start": "next start",
+    "start:docker": "docker run -p 80:3000 covid-stats-dashboard",
+    "deploy": "sls deploy --stage prod --force",
+    "lint": "eslint **/*.tsx",
+    "format": "eslint **/*.tsx --fix",
+    "pretty": "prettier --write **/**/*.tsx"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.4",
+    "antd": "^4.1.1",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.17",
+    "aws-serverless-express": "^3.3.8",
+    "d3": "^5.15.1",
+    "d3-fetch": "^1.1.2",
+    "d3-scale": "^3.2.1",
+    "express": "^4.17.1",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
+    "moment": "^2.24.0",
     "next": "9.3.4",
+    "node-fetch": "^2.6.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-helmet": "^6.0.0",
+    "react-markdown": "^4.3.1",
+    "react-simple-maps": "^2.0.0",
+    "react-tooltip": "^4.2.1",
+    "recharts": "^1.8.5",
+    "strip-ansi": "^6.0.0"
+  },
+  "devDependencies": {
+    "@types/d3": "^5.7.2",
+    "@types/d3-fetch": "^1.1.5",
+    "@types/d3-scale": "^2.2.0",
+    "@types/express": "^4.17.6",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^13.11.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^5.0.15",
+    "@types/react-simple-maps": "^1.0.1",
+    "@types/react-tooltip": "^3.11.0",
+    "@types/recharts": "^1.8.9",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
+    "babel-eslint": "10.x",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-better-styled-components": "^1.1.2",
+    "eslint-plugin-graphql": "^3.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^2.0.4",
+    "sass": "^1.26.3",
+    "serverless-domain-manager": "^3.3.1",
+    "serverless-nextjs-plugin": "^2.4.9",
+    "serverless-offline": "^6.1.4",
+    "typescript": "^3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   }
 }
