--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:docker": "docker build -f docker/Dockerfile -t silverxu/covid-stats-dashboard .",
     "start": "next start",
     "start:docker": "docker run -p 80:3000 silverxu/covid-stats-dashboard",
-    "publish:docker": "docker push silverxu/covid-stats-dashboard",
+    "push:docker": "docker push silverxu/covid-stats-dashboard",
+    "publish:docker": "yarn build:docker && yarn push:docker",
     "deploy": "eb deploy",
     "lint": "eslint **/*.tsx",
     "format": "eslint **/*.tsx --fix",
