--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,19 @@ language: node_js
 services:
   - docker
 
-install: true
-
 node_js:
   - "12.14.1"
 jobs:
   include:
     - stage: linting
-      script: yarn lint
+      script: yarn build
     - stage: publish
       if: branch = master
+      install: true
       script: yarn publish:docker
     - stage: deploy
       if: branch = master
+      install: true
       script: yarn deploy
 
 after_success:
