--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "yarn lint && next build",
     "build:docker": "docker build -f docker/Dockerfile -t silverxu/covid-stats-dashboard .",
     "start": "next start",
     "start:docker": "docker run -p 80:3000 silverxu/covid-stats-dashboard",
