--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jobs:
       before_install:
         - sudo apt-get install python3 -y
         - sudo apt-get install python3-pip -y
+        - sudo pip install -U pyopenssl
         - pip install awsebcli --upgrade --user
       install: true
       script:
